--- a/web/stylecad.css
+++ b/web/stylecad.css
@@ -1,60 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;700&family=Roboto:wght@100;300;400;500;700;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
+
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: 'Poppins', sans-serif;
+}
+
 body {
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #f5f5f5;
-}
-
-main {
-    background: rgb(148, 187, 241);
-    background: radial-gradient(circle, rgba(148, 187, 241, 1) 0%, rgba(148, 190, 233, 1) 100%);
-    width: 100%;
-    height: 100%;
-}
-
-.container {
-    width: 350px;
-    height: 715px;
-    margin: 0 auto;
-    padding: 20px;
-    background: rgb(227, 239, 255);
-    background: radial-gradient(circle, rgba(227, 239, 255, 1) 0%, rgba(148, 190, 233, 1) 100%);
-    border-radius: 15px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-    text-align: center;
-    color: #333;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(227, 239, 255);
+  background: radial-gradient(circle, rgba(227, 239, 255, 1) 0%, rgba(148, 190, 233, 1) 100%);
 }
 
 form {
-    margin-top: 20px;
+  width: 90%;
+  max-width: 400px;
+  background: rgb(227, 239, 255);
+  background: radial-gradient(circle, rgba(227, 239, 255, 1) 0%, rgba(148, 190, 233, 1) 100%);
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
-label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
+form label {
+  font-weight: 500;
+  font-size: 16px;
+  color: black;
 }
 
-input[type="number"],
-input[type="text"] {
-    width: 90%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+form input[type="number"],
+form input[type="text"] {
+  width: 100%;
+  outline: none;
+  padding: 8px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
-input[type="submit"] {
-    background-color: #007BFF;
-    color: #fff;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
+form input[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  background-color: rgb(57, 57, 226);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-input[type="submit"]:hover {
-    background-color: #0056b3;
+form input[type="submit"]:hover {
+  background-color: #4545e2; 
 }
-
